atualizacao de rotas e parte de recuperar
