# src/auth/dto/confirm-password-reset.dto.ts
@@ -1,0 +1,15 @@
+import { IsEmail, IsString, MinLength } from 'class-validator';
+
+export class ConfirmPasswordResetDto {
+
+  @IsEmail()
+  email: string;
+
+  @IsString()
+  token: string;
+
+  @IsString()
+  @MinLength(6)
+  novaSenha: string;
+
+}
