# src/integracoes/mobuss/dto/cancelar-visita.dto.ts
@@ -1,0 +1,8 @@
+import { IsString } from 'class-validator';
+
+export class CancelarVisitaDto {
+
+  @IsString()
+  idVisita: string;
+
+}
